--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-scripts": "3.4.1",
     "react-toastify": "^6.0.5",
     "styled-components": "^5.1.0",
-    "typescript": "~3.7.2"
+    "typescript": "^4.0.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -59,7 +59,7 @@
     "@types/axios": "^0.14.0",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
+    "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.4",
     "@types/styled-components": "^5.1.0",
