--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,17 @@
 version: 2.1
 orbs:
-  node: circleci/node@1.1.6
   codecov: codecov/codecov@1.1.0
 jobs:
-  build-and-test:
-    executor:
-      name: node/default
+  build:
+    docker:
+      - image: circleci/node:12
     steps:
       - checkout
-      - node/with-cache:
-          steps:
-            - run: npm install
-            - run: npm test
-            - run: npm run coverage
+      - run: npm install
+      - run: npm run coverage
       - codecov/upload:
           file: tests/coverage/*.json
 workflows:
-    build-and-test:
+    build:
       jobs:
-        - build-and-test
+        - build
