--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - checkout
       - run: npm install
-      - run: npm run coverage
+      - run: npm run test
       - codecov/upload:
           file: tests/coverage/*.json
 workflows:
