--- a/package.json
+++ b/package.json
@@ -3,20 +3,17 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^12.1.2",
-    "axios": "^0.25.0",
+    "axios": "^0.26.1",
     "filesize": "^8.0.7",
     "history": "^5.2.0",
     "polished": "^4.1.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-dropzone": "^12.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
     "react-toastify": "^8.1.1",
-    "styled-components": "^5.1.0",
-    "typescript": "^4.0.2"
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -37,12 +34,14 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^13.0.0",
+    "@testing-library/user-event": "^14.0.4",
     "@types/axios": "^0.14.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.16",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.1.4",
     "@types/styled-components": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
@@ -60,6 +59,7 @@
     "jest-transform-stub": "^2.0.0",
     "prettier": "^2.0.4",
     "react-app-rewired": "^2.1.5",
-    "ts-jest": "^27.1.3"
+    "ts-jest": "^27.1.3",
+    "typescript": "^4.0.2"
   }
 }
