--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,18 @@
 version: 2.1
 orbs:
+  node: circleci/node@5.0.2
   codecov: codecov/codecov@1.1.0
 jobs:
-  build:
-    docker:
-      - image: circleci/node:16
+  test:
+    executor: node/default
     steps:
       - checkout
-      - run: npm ci
+      - node/install-packages:
+          cache-path: ~/gofinances-web/node_modules
       - run: npm run test
       - codecov/upload:
           file: tests/coverage/*.json
 workflows:
-    build:
+    test:
       jobs:
-        - build
+        - test
