--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.26.1",
-    "filesize": "^8.0.7",
-    "history": "^5.2.0",
-    "polished": "^4.1.4",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-dropzone": "^12.0.2",
-    "react-router-dom": "^6.2.1",
-    "react-scripts": "^5.0.0",
-    "react-toastify": "^8.1.1",
-    "styled-components": "^5.1.0"
+    "axios": "^1.2.1",
+    "filesize": "^10.0.6",
+    "history": "^5.3.0",
+    "polished": "^4.2.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-router-dom": "^6.5.0",
+    "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.1",
+    "styled-components": "^5.3.6"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -34,32 +34,33 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^14.0.4",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/axios": "^0.14.0",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.16",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.17",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
     "@types/react-router-dom": "^5.1.4",
-    "@types/styled-components": "^5.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.11.0",
-    "@typescript-eslint/parser": "^5.11.0",
-    "axios-mock-adapter": "^1.18.1",
+    "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
+    "axios-mock-adapter": "^1.21.2",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-import-resolver-typescript": "^2.0.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.5.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jest-environment-jsdom": "^29.3.1",
     "jest-environment-jsdom-sixteen": "^2.0.0",
     "jest-transform-stub": "^2.0.0",
-    "prettier": "^2.0.4",
-    "react-app-rewired": "^2.1.5",
-    "ts-jest": "^27.1.3",
-    "typescript": "^4.0.2"
+    "prettier": "^2.8.1",
+    "react-app-rewired": "^2.2.1",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.9.4"
   }
 }
